# mxh-stack

./: .gitignore  README.md
py/: README.md  app.py  db_ping.py  main.py  requirements.txt  test.py
py/apps/: activated.yml
py/apps/csc/: csc.py
py/static/css/: style.css
py/templates/: 404.html  base.html  dashboard.html  home.html  maintenance.html  notlogin.html  test.html
py/templates/csc/: base.html  home.html  notification.html  room.html
py/user/: models.py  routes.py
rust/: .gitignore
rust/mxh-stack/: Cargo.toml  readme.md
rust/mxh-stack/src/: main.rs
rust/mxh-stack/src/routes/home/: home.html
rust/mxh-stack/src/routes/login/: login.html  post.rs
rust/mxh-stack/static/css/: styles.css
rust/mxh-stack/templates/: index.html
